--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "private": true,
-  "displayName": "Plugin Name",
-  "name": "homebridge-plugin-name",
+  "displayName": "Homebridge Anova Oven Plugin",
+  "name": "homebridge-plugin-anova-toast",
   "version": "1.0.0",
-  "description": "A short description about what your plugin does.",
+  "description": "A plugin that allows you to control your Anova Precision Oven from Homebridge. Right now, it just lets you make toast.",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
+    "url": "https://github.com/jon-bell/homebridge-plugin-anova-toast.git"
   },
   "bugs": {
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
+    "url": "https://github.com/jon-bell/homebridge-plugin-anova-toast/issues"
   },
   "engines": {
     "node": ">=14.18.1",
@@ -26,7 +25,14 @@
   "keywords": [
     "homebridge-plugin"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
+    "pino": "^8.14.1",
+    "typed-emitter": "^2.1.0",
+    "uuid": "^9.0.0",
+    "ws": "^8.13.0"
+  },
   "devDependencies": {
     "@types/node": "^16.10.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -34,6 +40,8 @@
     "eslint": "^8.0.1",
     "homebridge": "^1.3.5",
     "nodemon": "^2.0.20",
+    "openapi-typescript-codegen": "^0.24.0",
+    "pino-pretty": "^10.0.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
