--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2018", // ~node10
+    "target": "es6",
     "module": "commonjs",
-    "lib": [
-      "es2015",
-      "es2016",
-      "es2017",
-      "es2018"
-    ],
-    "declaration": true,
-    "declarationMap": true,
     "sourceMap": true,
     "outDir": "./dist",
     "rootDir": "./src",
